--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -52,9 +52,9 @@ var authors =[];
 var force = d3.layout.force()
     .nodes(nodes)
     .size([width, height])
-    .charge(-120)
-    .linkDistance(20)
-    .gravity(0.5)
+    .friction(0.25)
+	.charge(0)
+    .gravity(0.1)
     .on("tick", tick);
 
 var svg = d3.select("body").append("svg")
@@ -71,6 +71,7 @@ d3.json(jsonLoc, function(json) {
   var Auth_node = {x:AuthPos[AuthCount].x, y: AuthPos[AuthCount].y,
                    name:json.author,
                    fixed:true,
+				   gravatar: "/static/gravatars/" + json.authorEmail + ".jpg",
                    radius:50};
   authors.push(Auth_node);
   AuthCount ++;
@@ -107,6 +108,9 @@ function tick() {
       .attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; })
       .moveToFront();
+  
+  d3.selectAll("image")
+  .moveToFront();
       
   link
       .attr("x1", function(d) { return d.source.x; })
@@ -114,8 +118,7 @@ function tick() {
       .attr("x2", function(d) { return d.target.x; })
       .attr("y2", function(d) { return d.target.y; })
       .attr("stroke-width", function(d){
-        return (d.target.size > 0 ? scaleLink(d.width): 0);
-      });
+        return (d.target.size > 0 ? scaleLink(d.width): 0)});
 }
 
 // Resolves collisions between d and all other circles.
@@ -185,18 +188,6 @@ function color(violation,size){
 function update(){
   // console.log(nodes);
   if (currentJson == 0){
-    author = svg.selectAll(".author")
-              .data(authors)
-              .enter().insert("circle")
-              .attr("cx",  function(d){return d.x})
-              .attr("cy",  function(d){return d.y})
-              .attr("fixed",function(d){return d.fixed})
-              .attr("class", "author")
-              .attr("name", function(d){return d.name;})
-              .attr("r", function(d){ return d.radius;})
-              .append("svg:title")
-              .text(function(d){return d.name;})
-              .call(force.drag);
 
     node = svg.selectAll(".node")
               .data(nodes)
@@ -216,6 +207,20 @@ function update(){
               .enter().insert("line")
               .attr("class", "link")
               .attr("stroke-width", function(d){return scaleLink(d.width);});
+    author = svg.selectAll(".author")
+              .data(authors)
+              .enter().insert("image")
+			  .attr("xlink:href", function(d) {return d.gravatar;})
+              .attr("x",  function(d){return d.x - d.radius*0.5})
+              .attr("y",  function(d){return d.y - d.radius*0.5})
+              .attr("fixed",function(d){return d.fixed})
+              .attr("class", "author")
+              .attr("name", function(d){return d.name;})
+              .attr("width", function(d){ return d.radius;})
+              .attr("height", function(d){ return d.radius;})
+              .append("svg:title")
+              .text(function(d){return d.name;})
+              .call(force.drag);
     force.start();
   }else{
     jsonLoc = "static/"+currentJson+".json"; 
@@ -250,6 +255,12 @@ function update(){
           }
         }
         // call author to update inserted author
+        // call link to update inserted links
+        link = svg.selectAll(".link")
+                  .data(links)
+                  .enter().insert("line")
+                  .attr("class", "link")
+                  .attr("stroke-width", function(d){return scaleLink(d.width);});
         author = svg.selectAll(".author")
                     .data(authors)
                     .enter().insert("circle")
@@ -262,12 +273,6 @@ function update(){
                     .append("svg:title")
                     .text(function(d){return d.name;})
                     .call(force.drag);
-        // call link to update inserted links
-        link = svg.selectAll(".link")
-                  .data(links)
-                  .enter().insert("line")
-                  .attr("class", "link")
-                  .attr("stroke-width", function(d){return scaleLink(d.width);});
       }else{
         // update auth link
         var Auth_node = authors[auth]
@@ -307,6 +312,7 @@ function update(){
         link = svg.selectAll(".link")
           .data(links)
           .attr("stroke-width", function(d){return d.width;});
+		  
       }
 
       //== update class color and radius
@@ -333,7 +339,7 @@ function update(){
                 .attr("r", function(d){ return d.radius;})
                 .style("fill", function(d){return color(d.violation,d.size);})
                 .call(force.drag);    
-
+		
        force.start();         
 
     });
